[gd_scene load_steps=4 format=3 uid="uid://bs1isnrs23b2d"]

[ext_resource type="Script" path="res://scripts/buildings/building.gd" id="1_6c7wd"]
[ext_resource type="Script" path="res://scripts/components/health_component/health_component.gd" id="2_ghodh"]
[ext_resource type="Script" path="res://scripts/components/self_destruction_component/self_destruction_component.gd" id="3_yvly5"]

[node name="Building" type="StaticBody2D" groups=["BattlegroundObjects", "buildings"]]
collision_layer = 4
collision_mask = 14
script = ExtResource("1_6c7wd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="SelfDestructionComponent" type="Node2D" parent="."]
script = ExtResource("3_yvly5")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_ghodh")

[connection signal="hp_ran_out" from="HealthComponent" to="." method="_on_health_component_hp_ran_out"]
