[gd_scene load_steps=6 format=3 uid="uid://bdcu3imq3e6t1"]

[ext_resource type="Script" path="res://scripts/components/health_component/health_component.gd" id="1_3nccn"]
[ext_resource type="StyleBox" uid="uid://clsmfsiiaw0sv" path="res://assets/textures/progress_bar_bg.tres" id="2_m3rw7"]
[ext_resource type="StyleBox" uid="uid://dx67212ddv7rp" path="res://assets/textures/health_bar_fill.tres" id="3_qamvd"]
[ext_resource type="StyleBox" uid="uid://dnxor443pq7tr" path="res://assets/textures/shield_bar_fill.tres" id="4_a7jbo"]
[ext_resource type="PackedScene" uid="uid://bli7k15t8yntj" path="res://scripts/components/effect_holder_component/effect_hold_component.tscn" id="5_qy8xb"]

[node name="HealthComponent" type="Node2D" node_paths=PackedStringArray("health_bar", "shield_bar", "effect_holder")]
script = ExtResource("1_3nccn")
health_bar = NodePath("HealthBar")
shield_bar = NodePath("ShieldBar")
effect_holder = NodePath("EffectHoldComponent")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
theme_override_styles/background = ExtResource("2_m3rw7")
theme_override_styles/fill = ExtResource("3_qamvd")
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 30.0
offset_right = 27.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_styles/background = ExtResource("2_m3rw7")
theme_override_styles/fill = ExtResource("4_a7jbo")
show_percentage = false

[node name="EffectHoldComponent" parent="." instance=ExtResource("5_qy8xb")]
